<?xml version="1.0"?>
<package format="3">
  <name>control</name>
  <version>0.0.1</version>
  <description>Pure Pursuit controller</description>

  <maintainer email="e23zhou@watonomous.ca">Eddy Zhou</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
