<?xml version="1.0"?>
<package format="3">
  <name>planner</name>
  <version>0.0.1</version>
  <description>Global planner with A* and nearest-free start/goal relocation</description>

  <maintainer email="e23zhou@watonomous.ca">Eddy Zhou</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
